--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 .App {
   text-align: center;
 }
 
+img {
+  width: 150px;
+  height: 150px;
+}
