order history done

--- a/src/containers/Checkout/Checkout.module.css
+++ b/src/containers/Checkout/Checkout.module.css
@@ -18,3 +18,9 @@
     text-decoration: none;
     color: #000;
 }
+
+.Order:disabled {
+    color: #eee;
+    background-color: #ccc;
+    cursor: not-allowed;
+}
