--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -16,3 +16,11 @@
     border: 1px solid red;
     background-color: rgb(236, 203, 200);
 }
+
+.ErrMessage {
+    color: red;
+    font-size: 8px;
+    width: 500px;
+    text-align: left;
+    margin: 0 auto;
+}
