--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Viaoda+Libre&display=swap');
 
 .Header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff;
     display: flex;
     height: 10vh;
     padding: 10px;
@@ -19,6 +24,22 @@
     cursor: pointer;
 }
 
+.Hamburger {
+    margin-left: auto;
+    width: 35px;
+    height: 35px;
+    cursor: pointer;
+    display: none;
+}
+
+.Hamburger div {
+    width: 100%;
+    height: 5px;
+    margin: 5px 0;
+    background-color: #f05e23;
+    align-items: center;
+}
+
 .Cart {
     margin-right: 20px;
 }
@@ -35,4 +56,16 @@
 .Header a {
     text-decoration: none;
     color: black;
+}
+
+@media (max-width: 500px) {
+    .Cart {
+    display: none;
+}
+    .History {
+        display: none;
+    }
+    .Hamburger {
+        display: block;
+    }
 }
